Bug 149595 - Images disappearing when moving text with drag & drop & track changes record enabled
Summary: Images disappearing when moving text with drag & drop & track changes record ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.4.2 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2022-06-17 15:17 UTC by Telesto
Modified: 2022-12-30 14:22 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (11.06 KB, application/vnd.oasis.opendocument.text)
2022-06-22 18:19 UTC, Telesto
Details
Slightly different result (81.44 KB, image/png)
2022-06-23 00:24 UTC, Scott Clewell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-06-17 15:17:54 UTC
Description:
Images disappearing when moving text with drag & drop & track changes record enabled

Steps to Reproduce:
1. Open the attached file
2. Select the yellow text
3. Drag and drop to top (position doesn't really matter)

Actual Results:
Shapes at anchored at the start/end of the paragraph gone

Expected Results:
If it's up to me, image should be included within the drag.. But well the current design is to leave those images behind.. disappearing is certainly not OK


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 089c91b1ad16232f130cb50266732509f83c52eb
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (nl_NL); UI: en-GB
Calc: CL Jumbo
Comment 1 Scott Clewell 2022-06-21 16:46:47 UTC
Greetings Telesto,
When you have a chance please attach your example file for testing.
Thank you!
Comment 2 Telesto 2022-06-22 18:19:36 UTC
Created attachment 180916 [details]
Example file
Comment 3 Telesto 2022-06-22 18:20:21 UTC
(In reply to Scott Clewell from comment #1)
> Greetings Telesto,
> When you have a chance please attach your example file for testing.
> Thank you!

Thanks for notification :-)
Comment 4 Scott Clewell 2022-06-23 00:24:22 UTC
Created attachment 180925 [details]
Slightly different result
Comment 5 Scott Clewell 2022-06-23 00:26:58 UTC
Thanks Telesto!

I can reproduce with 2 boxes gone. The blue box remains and is selected.

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: c1898a4d1b38e0077416a104e2b47573ce207ffa
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: CL

and

Version: 7.3.4.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.4~rc2-0ubuntu0.20.04.1~lo1
Calc: threaded
Comment 6 raal 2022-06-26 08:36:13 UTC
This seems to have begun at the below commit.
Adding Cc: to Michael Stahl Could you possibly take a look at this one?
Thanks
 6d81b91b2f3b195185c1f98056e34bfc793676c4 is the first bad commit
commit 6d81b91b2f3b195185c1f98056e34bfc793676c4
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Jul 22 08:44:32 2019 +0200

    source 28b77c89dfcafae82cf2a6d85731b643ff9290e5

https://git.libreoffice.org/core/+/28b77c89dfcafae82cf2a6d85731b643ff9290e5
Comment 7 Commit Notification 2022-12-14 14:24:50 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c684301352bcca709bc8d1c99e0f08e7096e9716

(related: tdf#149595) sw: also re-sort SwSortedObjs on SwPageFrame

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-12-14 14:25:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/80f4abfea971cf66259b65fe09366d31ed41809d

tdf#149595 sw: fix showing of fly at start/end of single-para delete

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Stahl 2022-12-14 14:27:57 UTC
fixed on master, by making the change tracking case do the same thing as without it
Comment 10 Commit Notification 2022-12-14 18:35:19 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/edccd344370e42c81245a826364204e0b4860023

(related: tdf#149595) sw: also re-sort SwSortedObjs on SwPageFrame

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2022-12-14 18:35:22 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/14a80e0525c88d62098147b57b3212bc46ed38d1

tdf#149595 sw: fix showing of fly at start/end of single-para delete

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2022-12-15 19:44:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/2033a23379c0eb9d6de41c7b1473769fda2cc632

(related: tdf#149595) sw: also re-sort SwSortedObjs on SwPageFrame

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2022-12-15 19:45:57 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/db29e834d1a2859492a61c57fe1a5131c8ea10eb

tdf#149595 sw: fix showing of fly at start/end of single-para delete

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.